@@ -36,6 +36,7 @@ MovieJukebox 1.9 BETA
   - Enhancement  #1320 Feedback on progress when Writing movie data
   - Fixed defect #1323 Posters not picked up from NFO file
   - Enhancement  #1326 Support 'blank' banners with custom generated text
+  - Enhancement  #1334 Remove unneeded country information and ratings from NFO Certification field 
   
 MovieJukebox 1.8
 ----------------
